# rgg-automation

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
docs/: _config.yml  detection.md  index.md
docs/_includes/: head-custom.html
judgment/: ARCHITECTURE.md  DETECTION.md  MAHJONG.md  POKER.md  README.md  SHOGI.md  pyproject.toml  requirements.txt
judgment/config/: regions.example.json  shogi.example.json
judgment/data/shogi/templates/: manifest.json
judgment/judgment_assist/: __init__.py  cards.py  labeling.py  sessions.py
judgment/judgment_assist/app/: __init__.py  cli.py  label.py  labels_tab.py  launcher.py  live.py  overlay.py  sessions.py  shogi_labels_tab.py  shogi_tab.py  verify_gui.py
judgment/judgment_assist/blackjack/: __init__.py  counting.py  engine.py  strategy.py
judgment/judgment_assist/capture/: __init__.py  calibrate.py  dataset.py  harvest.py  screen.py  sort_frames.py  verify_templates.py  window.py
judgment/judgment_assist/mahjong/: __init__.py  efficiency.py  shanten.py  tiles.py
judgment/judgment_assist/poker/: __init__.py  advisor.py  equity.py  evaluator.py
judgment/judgment_assist/shogi/: __init__.py  board.py  engine.py  mate.py
judgment/judgment_assist/vision/: __init__.py  cnn_cards.py  hud.py  locate.py  poker.py  poker_cards.py  reader.py  recognizer.py  result.py  shogi_board.py  shogi_hand.py  shogi_pieces.py  state.py
judgment/models/: cnn_card.pt
judgment/tests/: _mock_usi.py  test_cards.py  test_cnn_cards.py  test_counting.py  test_equity.py  test_evaluator.py  test_harvest.py  test_hud.py  test_hud_advice.py  test_hud_white.py  test_labeling.py  test_launcher.py  test_live.py  test_locate.py  test_mahjong_efficiency.py  test_mahjong_shanten.py  test_mahjong_tiles.py  test_poker_cards.py  test_poker_state.py  test_reader.py  test_recognizer.py  test_sessions.py  test_shogi_board.py  test_shogi_engine.py  test_shogi_format.py  test_shogi_hand.py  test_shogi_labels.py  test_shogi_mate.py  test_shogi_pieces.py  test_shogi_tab.py  test_shogi_vision.py  test_strategy.py  test_window.py
