[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "judgment-assist"
version = "0.1.0"
description = "Real-time move advisor for Judgment's poker and blackjack minigames"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
]

# Managed with uv: `uv sync` to create .venv + install, `uv run pytest` to test.
[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["judgment_assist"]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cpu"

[tool.pytest.ini_options]
# Lets `from judgment_assist...` resolve without an install. The brains import
# no heavy deps, so tests run with just pytest present.
pythonpath = ["."]
testpaths = ["tests"]
