[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "judgment-assist"
version = "0.1.0"
description = "Real-time move advisor for Judgment's poker and blackjack minigames"
requires-python = ">=3.10"
dependencies = [
    "mss>=9.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "scikit-learn>=1.7.2",
    "torch>=2.12.0",
    "torchvision>=0.23",
]

# Managed with uv: `uv sync` to create .venv + install, `uv run pytest` to test.
[dependency-groups]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["judgment_assist"]

# torch is GPU (CUDA 12.6) for the card-reading CNN experiments on an NVIDIA GPU.
# `explicit = true` keeps this index for torch only; everything else resolves from
# PyPI. torch+cu126 still runs on a CPU-only box (CUDA just reports unavailable),
# so the project stays usable without a GPU — only the wheel is bigger. Swap the
# url back to .../cpu for the small CPU wheel.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.pytest.ini_options]
# Lets `from judgment_assist...` resolve without an install. The brains import
# no heavy deps, so tests run with just pytest present.
pythonpath = ["."]
testpaths = ["tests"]
